ComboBox: fix delegate model re-creation

Instead of deleting the old model first and then immediately creating
a new model, create the new model first, and then destroy the old one
afterwards. This simple trick ensures that the new model doesn't land
to the same memory address where the old model was allocated, which in
turn made QQuickItemView think the model didn't change.

Change-Id: Ic1ba1345d50b62a93309e4c3f201152ce57d0412
Task-number: QTBUG-50385
Task-number: QTBUG-50386
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>